thebodyshop.co.uk (archived on 2004-12-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 2806,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": true,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.53,
  "homepage_snapshot_redirected_domain": "thebodyshop.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040926081523id_/http://www.uk.thebodyshop.com/web/tbsuk",
  "homepage_snapshot_url": "https://web.archive.org/web/20040924120455id_/http%3A//thebodyshop.co.uk",
  "interval": "2004_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "thebodyshop.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041205045137id_/http%3A//www.uk.thebodyshop.com/web/tbsuk/legal_privacy.jsp",
  "policy_title": "The Body Shop",
  "policy_url": "uk.thebodyshop.com/web/tbsuk/legal_privacy.jsp",
  "sha1": "6670f1ecbd9f60307f2d17971e0c59d4a58c2418",
  "simhash": 3914293310101152186,
  "simhash_updated": false,
  "site_hostname": "thebodyshop.co.uk",
  "site_url": "http://thebodyshop.co.uk",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041205045137",
  "word_count": 505,
  "year": 2004
}

--- a/t/th/the/thebodyshop.co.uk.html
+++ b/t/th/the/thebodyshop.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thebodyshop.co.uk privacy policy that was archived on 2004-04-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040406202153id_/http%3A//www.uk.thebodyshop.com/web/tbsuk/legal_privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thebodyshop.co.uk privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205045137id_/http%3A//www.uk.thebodyshop.com/web/tbsuk/legal_privacy.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
@@ -255,7 +255,7 @@ function openProducts(url) {
 
 					<td><img src="/bodyshop/templates/uk/images/header_spacer.gif" width="1" height="23" border="0" alt=""></td>
 					
-					<td><a href="http://www.uk.thebodyshop.com/web/tbsuk/products/uk_products.jsp?curr_category=TBSUK" onmouseover="chng_img('products2',3);" onmouseout="chng_img('products2',2);"><img src="/bodyshop/templates/uk/images/products.gif" width="67" height="23" border="0" alt="products" name="products2"></a></td>		
+					<td><a href="http://www.uk.thebodyshop.com/web/tbsuk/indexTiles.jsp?tbsmain=products" onmouseover="chng_img('products2',3);" onmouseout="chng_img('products2',2);"><img src="/bodyshop/templates/uk/images/products.gif" width="67" height="23" border="0" alt="products" name="products2"></a></td>		
 	
 					<td><img src="/bodyshop/templates/uk/images/header_spacer.gif" width="1" height="23" border="0" alt=""></td>
 					
