--- a/r/ra/ray/raymondjames.com.html
+++ b/r/ra/ray/raymondjames.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the raymondjames.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603121915id_/http%3A//raymondjames.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the raymondjames.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205050827id_/http%3A//www.raymondjames.com/privacy_cl.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-<title>Raymond James Financial - Internet Privacy Statement for www.RaymondJames.com</title>
+<title>Raymond James Financial - Privacy notice for Raymond James Clients, including Heritage Family of Funds Customers</title>
 
 <meta name="Keywords" content="Raymond James Financial, Internet Privacy statement, online privacy policy,  Raymond James Internet Privacy policy statement, vistor privacy"> 
 <meta name="Description" content="Explanation of Raymond James Financial's Internet privacy statement for www.raymondjames.com">
@@ -76,8 +76,8 @@ document.write(search_box)
 <!-- links begin -->
 
 <p class="linkstop"><span class="nonlink">Privacy</span></p>
-<p class="links2"><a href="privacy.htm" class="linkitems"><span class="nolink">Internet Privacy Statement</span></a></p>
 <p class="links2"><a href="privacy_cl.htm" class="linkitems">Privacy Notice</a></p>
+<p class="links2"><a href="privacy.htm" class="linkitems">Internet Privacy Statement</a></p>
 
 <!-- links end -->
 
@@ -102,51 +102,51 @@ document.write(offloc_form)
 
 
 
-<h2>Internet Privacy Statement for www.RaymondJames.com</h2>
+<h2>Privacy Notice</h2>
 
 
-<p><big class="dropcap">R</big>aymond James Financial is committed to online privacy.</p>
-<p>Visitors may browse the Raymond James Web site to learn about our many
-services, get delayed quotes and find career opportunities without giving any
-personal information. Any information collected on this site, i.e. the zip code
-entered for the Office Locator system is used only to locate the closest Raymond
-James offices and is not kept in any format. Personal information is only made
-available when a site visitor volunteers it, through our Contact Us page, to
-request that a Raymond James Financial Advisor contact them. This information is
-sent to the Financial Advisor through e-mail and is not collected in any other
-format.</p>
-<p>Web site visitor information with respect to non-clients<i> </i>is collected
-with the use of computer IP addresses on an aggregate, anonymous basis in which
-no personal information is associated with this data. This data is gathered
-through the use of Web server log files where site activity is stored. The
-information is used to help diagnose problems with our server, to measure the
-use of our Web site content and to administer our Web site. None of the
-information gathered by the Web server is associated with you as an individual.
-Although this contains no personal information other than the IP address, it may
-be used to track down an individual who is attacking or misusing our resources.
-Cookie files are used on the site to help visitors navigate the site more
-easily.</p>
-<p>We do store information regarding actions taken by clients when they access
-their client accounts. This information may be provided to the client's
-Financial Advisor and to other Raymond James Associates who provide services or
-products to the client.</p>
-<p>Raymond James offers online services via OnlinePlus to a limited segment of
-its client base. To protect our client information, users are required to log in
-using a unique user name and password. Raymond James uses encryption technology
-to secure client data as it is being transferred between computers and also has
-implemented a combination of computer hardware and software to keep unauthorized
-users from accessing information on Raymond James' computer network.</p>
-<p>This site contains links to other Web sites. www.RaymondJames.com is not
-responsible for the privacy practices or the content of such Web sites.</p>
-<p>The Raymond James Internet Privacy Statement applies to U.S. clients and Web
-site visitors only.</p>
-<p>Raymond James Financial may change this privacy statement at any time. Any
-changes or updates will be effective immediately upon posting to this site.</p>
+
+<p><big class="dropcap">R</big>aymond James and the Heritage Family of Funds, administered by its
+wholly-owned subsidiary Heritage Asset Management, are committed to protecting
+confidentiality of the information furnished to us by our clients.</p>
+<p>We are providing you this information as required by Regulation S-P adopted
+by the Securities and Exchange Commission.</p>
+
+<h3>Information about you that we collect</h3>
+
+<p>We collect nonpublic personal information about you from the following
+sources: information we receive from you on applications or other forms or
+through our Web site; information about your transactions with us, our
+affiliates or others; and information we may receive from a consumer reporting
+agency.</p>
+
+<h3>Our use of information about you</h3>
+
+<p>We may share information about you with other companies in the Raymond James
+family – that is, companies that are owned by Raymond James Financial. That
+may include information shared by the Heritage Family of Funds with Raymond
+James broker/dealers and investment advisors, and information shared among other
+Raymond James financial service providers, such as financial advisors and
+insurance and annuity consultants. 
+
+Raymond James Financial Services, Inc. is a party to joint marketing arrangements with certain banks and credit unions. Information about clients who participate in these programs may be shared by RJFS with the participating bank or credit union. These financial institutions have agreed to treat any such information as confidential and not to share such information with any other parties.
+
+Otherwise, we do not disclose any nonpublic personal information about you to
+anyone except as permitted by law. We follow the same policy with respect to
+nonpublic information received from all clients and former clients.</p>
 
 
-<!-- <p>If you have any questions about this privacy statement, the practices of this
-site or your dealings with this Web site, please contact me.</p>
-<p>Thank you,</p>
+<h3>How we protect your confidential information</h3>
+
+<p>Raymond James has policies that restrict access to nonpublic personal
+information about you to those employees who have need for that information to
+provide investment alternatives or services to you, or to employees who assist
+those who provide investment alternatives or services to you. We maintain
+physical, electronic and procedural safeguards to protect your nonpublic
+personal information. </p>
+
+
+<!-- <p>Thank you,</p>
 
 <p><address><i>Lawrence Silver<br><br>
 Marketing Director<br>
@@ -161,6 +161,7 @@ St. Petersburg, FL 33716<br>
 
 
 
+   
 <!-- body end -->
 
 <div id="liquidstopbottom"><img src="/images/build/clear.gif" alt="" width="350" height="1" border="0"></div>
