--- a/d/di/dia/dialindia.com.html
+++ b/d/di/dia/dialindia.com.html
@@ -1,14 +1,22 @@
-<!--The following is the downloaded HTML source of the dialindia.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603041043id_/http%3A//dialindia.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dialindia.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205051758id_/http%3A//www.dialindia.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <title>Dialindia.com Privacy Policy</title>
 <meta http-equiv="KEYWORDS" content="">
 <meta http-equiv="DESCRIPTION" content="">
-</head>
+<script language="Javascript"><!--
+var d=new Date();var r=(d.getTime()%8673806982)+Math.random();var u=escape(window.location.href);
+var host=' language="Javascript" src="http://as.casalemedia.com/s?s=';
+document.write('<scr'+'ipt'+host+'54058&u='+u+'&f=1&id='+r+'"></scr'+'ipt>');
+//--></script><script language="Javascript" src="http://as.casalemedia.com/s?s=54058&amp;u=https%3A//web.archive.org/web/20041205051758id_/http%253A//www.dialindia.com/privacy.shtml&amp;f=1&amp;id=3514320801.441812"></script></head>
 
 
+<!-- Casale Media 2004 (C) -->
+<!-- Ad Format: Pop Under -->
+<!-- Domain(s): dialindia.com -->
 
+<!-- Casale Media 2004 (C) -->
 <body bgcolor="#FFFFFF" text="#000000" link="navy" alink="navy" vlink="blur" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0">
 <!-- FASTCLICK.COM InVue CODE v1.0 for dialindia.com -->
 <script language="javascript"><!--
@@ -90,8 +98,8 @@ i=u+x+'&sid='+id+'&m=1&f=b&v=1.4&c='+f+'&r='+escape(dc.referrer);
 u='<a  hr'+'ef="'+u+'/click.here?sid='+id+'&m=1&c='+f+'"  target="_blank">';
 dc.writeln('<ifr'+'ame src="'+i+'&d=f"'+t+'0 hspace=0 vspace=0 frameborder=0 scrolling=no>');
 if(navigator.appName.indexOf('Mic')<=0){dc.writeln(u+'<img src="'+i+'&d=n"'+z+'></a>');}
-dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=n&amp;sid=5118&amp;m=1&amp;f=b&amp;v=1.4&amp;c=3384&amp;r=&amp;d=f" width="468" height="60" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
-<a  href="http://media.fastclick.net/w/click.here?sid=5118&m=1&c=3384"  target="_blank"><img src="http://media.fastclick.net/w/get.media?t=n&sid=5118&m=1&f=b&v=1.4&c=3384&r=&d=n" width=468 height=60 border=0 ></a>
+dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=n&amp;sid=5118&amp;m=1&amp;f=b&amp;v=1.4&amp;c=2534&amp;r=&amp;d=f" width="468" height="60" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
+<a  href="http://media.fastclick.net/w/click.here?sid=5118&m=1&c=2534"  target="_blank"><img src="http://media.fastclick.net/w/get.media?t=n&sid=5118&m=1&f=b&v=1.4&c=2534&r=&d=n" width=468 height=60 border=0 ></a>
 </iframe>
 <noscript>
 <a href="http://media.fastclick.net/w/click.here?sid=5118&m=1&c=1"  target="_blank">
@@ -119,12 +127,12 @@ width=468 height=60 border=1></a></noscript>
 <table border="0" width="100%" bgcolor="#ffffcc" cellpadding="0" cellspacing="0">
 <tbody><tr>
 
-<td width="139" valign="top" align="center"><font face="arial, ms sans serif" size="1">&nbsp;</font></td>
+<td valign="top" align="center"><font face="arial, ms sans serif" size="1">&nbsp;</font></td>
 
 <td align="center">
 <a href="/index.html">
-<font size="1" face="arial" color="000000"><b>HOME</b></font></a><font size="1" face="arial" color="000000"><b> || <a href="http://www.dialindia.com/biz/" target="new"><font size="1" face="arial" color="000000"><b>BUSINESS DIRECTORY</b></font></a><b> || <a href="http://www.dialindia.com/bollywood/" target="new"><font size="1" face="arial" color="000000"><b>BOLLYWOOD</b></font></a><b> || <a href="http://www.greet2k.com" target="new"><font size="1" face="arial" color="000000"><b>E-GREETINGS</b></font></a><b> || <a href="/addurl.php"><font size="1" face="arial" color="000000">ADD A SITE</font></a><font size="1" face="arial" color="000000">
-</font></b></b></b></b></font></td>
+<font size="1" face="arial" color="000000"><b>HOME</b></font></a><font size="1" face="arial" color="000000"><b> || <a href="/dedicated_servers.shtml"><font size="1" face="arial" color="000000"><b>DEDICATED SERVERS</b></font></a><font size="1" face="arial" color="000000"><b> || <a href="http://www.dialindia.com/biz/" target="new"><font size="1" face="arial" color="000000"><b>BUSINESS DIRECTORY</b></font></a><b> || <a href="http://www.dialindia.com/bollywood/" target="new"><font size="1" face="arial" color="000000"><b>BOLLYWOOD</b></font></a><b> || <a href="http://www.greet2k.com" target="new"><font size="1" face="arial" color="000000"><b>E-GREETINGS</b></font></a><b> || <a href="/addurl.php"><font size="1" face="arial" color="000000">ADD A SITE</font></a><font size="1" face="arial" color="000000">
+</font></b></b></b></b></font></b></font></td>
 
 <td width="15%" valign="center">
 <form>
@@ -372,21 +380,7 @@ src="http://t0.extreme-dm.com/0.gif?tag=dial123&j=n"></noscript>
 
 <tr><td align="center" bgcolor="#004444"><br><br>
 
-<script>
-<!--
- // MaxOnline JavaScript tag for: Digital Wonderz (dialindia.com)
- if ((!document.images && navigator.userAgent.indexOf('Mozilla/2.') >= 0) || navigator.userAgent.indexOf("WebTV")>= 0) { 
-document.write('<A HREF="http://c4.maxserving.com/adclick/site=6415/area=side_ros/aamft=normal/aamsz=sideunit/PageID=' + PageId + '" target="_blank">');
-document.write('<IMG SRC="http://c4.maxserving.com/iserver/site=6415/area=side_ros/aamft=normal/aamsz=sideunit/PageID=' + PageId + '" border="0"></A>');
-}else{
-document.write('<SCR'+'IPT src=http://c4.maxserving.com/gen.js?site=6415&area=side_ros&group=sidebar&PageID=' + PageId + '><\/SCR'+'IPT>');
-}
-//-->
-</script><script src="http://c4.maxserving.com/gen.js?site=6415&amp;area=side_ros&amp;group=sidebar&amp;PageID=496018061365442800"></script>
-<noscript>
-<a href="http://c4.maxserving.com/adclick/site=6415/area=side_ros/aamsz=sideunit/PageID=1234567" target="_blank">
-<img src="http://c4.maxserving.com/iserver/site=6415/area=side_ros/aamsz=sideunit/PageID=1234567" border="0"></A>
-</noscript>
+
 
 <br><br><br>
 
@@ -470,18 +464,17 @@ If you have any questions concerning the privacy policies of Dialindia.com pleas
 	<tbody><tr>
 	<td>
 	<center>
-<table width="100%" bgcolor="000000"><tbody><tr><td align="center" valign="middle"><br><br>
-<!-- FASTCLICK.COM 180x150 Rectangle CODE for dialindia.com -->
-<script language="javascript" src="http://media.fastclick.net/w/get.media?sid=5118&amp;m=7&amp;tp=9&amp;d=j&amp;t=s"></script>
-<noscript><a href="http://media.fastclick.net/w/click.here?sid=5118&m=7&c=1" target="_top">
-<img src="http://media.fastclick.net/w/get.media?sid=5118&m=7&tp=9&d=s&c=1"
-width=180 height=150 border=1></a></noscript>
-<!-- FASTCLICK.COM 180x150 Rectangle CODE for dialindia.com -->
+<table width="100%" bgcolor="eeeedd"><tbody><tr><td align="center" valign="middle"><br><br>
+
+
+
+<a href="/index.html">
+<font size="1" face="arial" color="000000"><b>HOME</b></font></a><font size="1" face="arial" color="000000"><b> || <a href="/index.html"><font size="1" face="arial" color="000000"><b>WEB DIRECTORY</b></font></a><font size="1" face="arial" color="000000"><b> || <a href="http://www.dialindia.com/biz/" target="new"><font size="1" face="arial" color="000000"><b>INDIA BUSINESS DIRECTORY</b></font></a><b> || <a href="http://www.dialindia.com/bollywood/" target="new"><font size="1" face="arial" color="000000"><b>BOLLYWOOD</b></font></a><b> || <a href="http://www.greet2k.com" target="new"><font size="1" face="arial" color="000000"><b>E-GREETINGS</b></font></a><b> || <a href="/addurl.php"><font size="1" face="arial" color="000000">ADD A SITE</font></a><font size="1" face="arial" color="000000">
 
 <br><br>
 
-
-</td></tr></tbody></table>
+<br><br>
+</font></b></b></b></b></font></b></font></td></tr></tbody></table>
 	</center></td>
 	</tr>
 	</tbody></table>	
