haygroup.com (archived on 2004-12-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 3136,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.33,
  "homepage_snapshot_redirected_domain": "haygroup.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040929084541id_/http://www.haygroup.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040929084541id_/http%3A//haygroup.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "haygroup.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041205063233id_/http%3A//www.haygroup.com/Privacy_Policy.asp",
  "policy_title": "Hay Group - Privacy Policy",
  "policy_url": "haygroup.com/Privacy_Policy.asp",
  "sha1": "204a14233874f532adee73bc4adc99bbef478927",
  "simhash": 15985810642852596439,
  "simhash_updated": false,
  "site_hostname": "haygroup.com",
  "site_url": "http://haygroup.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20041205063233",
  "word_count": 492,
  "year": 2004
}

--- a/h/ha/hay/haygroup.com.html
+++ b/h/ha/hay/haygroup.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the haygroup.com privacy policy that was archived on 2004-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040620135756id_/http%3A//haygroup.com/Privacy_Policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the haygroup.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205063233id_/http%3A//www.haygroup.com/Privacy_Policy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <link rel="stylesheet" type="text/css" href="/styles/generic_full.css" media="screen">
@@ -81,6 +81,7 @@ return false;
 <option value="http://www.haygroup.de/">Germany</option>
 <option value="http://www.leaders-forum.com/">Greece</option>
 <option value="http://www.haygroup.hu/">Hungary</option>
+<option value="http://www.haygroup.ie/">Ireland</option>
 <option value="http://www.haygroup.it/">Italy</option>
 <option value="http://www.haygroup.nl/">Netherlands</option>
 <option value="http://www.haygroup.no/">Norway</option>
@@ -88,6 +89,10 @@ return false;
 <option value="http://www.haygroup.es/">Spain</option>
 <option value="http://www.haygroup.com.tr/">Turkey</option>
 <option value="http://www.haygroup.co.uk/">United Kingdom</option>
+<option value="#">--------------</option>
+<option value="#">|&nbsp;Middle East</option>
+<option value="#">--------------</option>
+<option value="http://www.haygroup.com/uae/">United Arab Emirates</option>
 <option value="#">--------------</option>
 <option value="#">|&nbsp;North America</option>
 <option value="#">--------------</option>
@@ -118,7 +123,7 @@ return false;
 <li><a href="http://www.hayresourcesdirect.haygroup.com/" target="country_site" title="">Hay Resources Direct</a></li>
 <li><a href="http://www.transforminglearning.com/" target="country_site" title="">Transforming Learning</a></li>
 <li><a href="http://www.haygroup.com/benefits/" target="country_site" title="">US Benefits</a></li>
-<li><a href="http://icm.haygroup.com/" target="country_site" title="">2004 International<br>Client Meeting</a></li>
+<li><a href="http://icm.haygroup.com/" target="country_site" title="">2005 International<br>Client Meeting</a></li>
 </ul>
 <!-- end other hay web sites list -->
 
