--- a/l/lo/lot/lotterycanada.com.html
+++ b/l/lo/lot/lotterycanada.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lotterycanada.com privacy policy that was archived on 2004-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040616091753id_/http%3A//www.lotterycanada.com/lottery/%3Fjob%3Dprivacy_statement) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lotterycanada.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205075656id_/http%3A//www.lotterycanada.com/lottery/%3Fjob%3Dprivacy_statement) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Statement - Lottery Canada</title>
@@ -57,6 +57,18 @@
 <area shape="rect" coords="0, 0, 129, 39" href="http://www.lotterycanada.com/lottery/?job=show_results&amp;lottery=na_lotto_649" alt="Lotto 6/49">
 </map>
 
+<map name="quick_results3">
+<area shape="rect" coords="1,18,124,38" href="http://www.lotterycanada.com/lottery/?job=show_results&amp;lottery=na_lotto_649" alt="Lotto 649" title="Latest Lotto 649 Results" onmouseover="window.status='Latest Lotto 649 Results';return true" onmouseout="window.status='';return true">
+<area shape="rect" coords="1,40,124,57" href="http://www.lotterycanada.com/lottery/?job=show_results&amp;lottery=na_super_7" alt="Latest Lotto Super 7 Results" title="Latest Lotto Super 7 Results" onmouseover="window.status='Latest Lotto Super 7 Results';return true" onmouseout="window.status='';return true">
+<area shape="rect" coords="1,59,124,77" href="http://www.lotterycanada.com/lottery/?job=celebration_2004_results" alt="Latest Celebration 2004 Results" title="Latest Celebration 2004 Results" onmouseover="window.status='Latest Celebration 2004 Results';return true" onmouseout="window.status='';return true">
+<area shape="rect" coords="1,78,124,96" href="http://www.lotterycanada.com/lottery/?job=show_results&amp;lottery=at_tag" alt="Latest Atlantic Tag Results" title="Latest Atlantic Tag Results" onmouseover="window.status='Latest Atlantic Tag Results';return true" onmouseout="window.status='';return true">
+<area shape="rect" coords="1,97,124,115" href="http://www.lotterycanada.com/lottery/?job=show_results&amp;lottery=qc_extra" alt="Latest Quebec Extra Results" title="Latest Quebec Extra Results" onmouseover="window.status='Latest Quebec Extra Results';return true" onmouseout="window.status='';return true">
+<area shape="rect" coords="1,116,124,133" href="http://www.lotterycanada.com/lottery/?job=show_results&amp;lottery=on_encore" alt="Latest Ontario Encore Results" title="Latest Ontario Encore Results" onmouseover="window.status='Latest Ontario Encore Results';return true" onmouseout="window.status='';return true">
+<area shape="rect" coords="1,134,124,152" href="http://www.lotterycanada.com/lottery/?job=show_results&amp;lottery=we_extra" alt="Latest Western Extra Results" title="Latest Western Extra Results" onmouseover="window.status='Latest Western Extra Results';return true" onmouseout="window.status='';return true">
+<area shape="rect" coords="1,153,124,172" href="http://www.lotterycanada.com/lottery/?job=show_results&amp;lottery=bc_extra" alt="Latest BC Extra Results" title="Latest BC Extra Results" onmouseover="window.status='Latest BC Extra Results';return true" onmouseout="window.status='';return true">
+</map>
+
+
 
 
 
@@ -93,27 +105,14 @@
 <br>
 </center>
 end of Nov 11th image -->
-<img src="images/quick-results2.gif" usemap="#quick_results" width="129" height="220" border="0" alt="Quick Results Menu"><br>
+<img src="images/quick-results3.gif" usemap="#quick_results3" width="129" height="178" border="0" alt="Quick Results Menu"><br>
 <img src="images/lottery_utilities.gif" usemap="#lottery_utilities" vspace="5" width="129" height="122" border="0" alt="Lottery Utilities Menu"><br>
 <img src="images/lottery_extras.gif" usemap="#lottery_extras" width="129" height="240" border="0" alt="Lottery Extras Menu">
 
-<p align="center"><a href="http://hop.clickbank.net/?panthassoc/kensilver"><img src="http://www.honestlotto.com/lottobanner3.gif" border="0" width="100" height="100"></a></p>
 
 <p align="center">
-<!--NOEDIT-->
-</p><center>
-<br>
-<table border="0" width="120" cellspacing="0" cellpadding="0" bgcolor="FFFFFF">
-<form action="http://www.searchtraffic.com/search.php3" method="GET"></form>
-<tbody><tr><td valign="bottom" height="40" align="center">
-<input type="hidden" value="thetraveller" name="l">
-<input type="text" size="15" name="term"><br>
-<input type="submit" value="Search The Web"></td></tr> 
-</tbody></table>
-</center>
-<!--/NOEDIT-->
 
-<p></p>
+</p>
 
  
 </td>
@@ -122,7 +121,7 @@ end of Nov 11th image -->
 
 <td valign="top" width="479">
 <p class="body" align="center">
-<!--[<b><a href="http://www.lotterycanada.com/lottery/#contest">Click here to win free lottery tickets!</a></b>]</p>-->
+
 </p><p class="header">Privacy Statement</p>
 <p>
 <span class="body">
@@ -178,14 +177,16 @@ or your dealings with our Web site, you can contact
 <td width="8"><img src="images/spacer.gif" width="8" height="1" alt=" "></td>
 
 <td valign="top" width="120">
+<p align="center"><a href="http://hop.clickbank.net/?panthassoc/kensilver"><img src="http://www.honestlotto.com/lottobanner3.gif" border="0" width="100" height="100"></a></p>
 
-<!-- Retail Canada link added Nov 6th 2003 -->
+
+<!-- Retail Canada link added Nov 6th 2003 
 <a href="http://www.retailcanada.com/contest.html?ref=lotterycanada" target="_new">
 <img src="http://www.lotterycanada.com/images/retailcanada_contest.gif" width="120" height="100" alt="Contests at RetailCanada.com">
 </a>
 <br>
 <img src="images/spacer.gif" width="8" height="1" alt=" ">
-<!-- end of Retail Canada Link -->
+ end of Retail Canada Link -->
 
 <iframe src="http://www.lotterycanada.com/banner/adframe.php?what=privacy_statement,_120x600|site,_120x600&amp;target=_new" framespacing="0" frameborder="no" scrolling="no" width="120" height="600">
 <script language='JavaScript' src='http://www.lotterycanada.com/banner/adjs.php?what=privacy_statement,_120x600|site,_120x600&target=_new&withText=0'></script>
@@ -203,7 +204,13 @@ Application &amp; Design by Q9 Media.
 Copyright © 2000-2004 LotteryCanada.com.  All rights reserved.<br>
 Read our <a href="http://www.lotterycanada.com/lottery/?job=privacy_statement">Privacy Statement</a> or <a href="http://www.lotterycanada.com/lottery/?job=disclaimer">Disclaimer</a>.
 </p>
-
+<br>
+<center>
+<!-- PHP Live! Stats http://www.phplivestats.com -->
+<script language="JavaScript" src="http://c1.phplivestats.com/php_live_stats.php?key=6f1f5ba8cf06df28dae7da3dbf9db215"></script>
+<!-- end PHP Live! Stats -->
+</center>
+<br>
 
 
 </body></html>
