--- a/c/ca/cas/casa.gov.au.html
+++ b/c/ca/cas/casa.gov.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the casa.gov.au privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602201316id_/http%3A//casa.gov.au/tools/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the casa.gov.au privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205084137id_/http%3A//www.casa.gov.au/tools/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd"><html><head>
 <title>Privacy statement</title>
