corporate-ir.net (archived on 2004-12-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "parked",
  "char_count": 7930,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": true,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.54,
  "homepage_snapshot_redirected_domain": "ccbn.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040925003049id_/http://www.ccbn.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040924234804id_/http%3A//corporate-ir.net",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "ccbn.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041205085044id_/http%3A//www.ccbn.com/privacy_policy.asp",
  "policy_title": "CCBN's Privacy Policy",
  "policy_url": "ccbn.com/privacy_policy.asp",
  "sha1": "eaa32b7e91997b9a2c63c1bcf24668bc83ba5983",
  "simhash": 3931278257124008843,
  "simhash_updated": false,
  "site_hostname": "corporate-ir.net",
  "site_url": "http://corporate-ir.net",
  "smog": 14.65,
  "strict_updated": true,
  "timestamp": "20041205085044",
  "word_count": 1317,
  "year": 2004
}

--- a/c/co/cor/corporate-ir.net.html
+++ b/c/co/cor/corporate-ir.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the corporate-ir.net privacy policy that was archived on 2003-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20031212022037id_/http%3A//ccbn.com/privacy_policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the corporate-ir.net privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205085044id_/http%3A//www.ccbn.com/privacy_policy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>CCBN's Privacy Policy </title>
@@ -50,7 +50,7 @@ Visit www.opencube.com for current QuickMenu Pro downloads and information. -->
 <!-- Beging Top Nav -->
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr class="bgContent"> 
-    <td><a name="top" id="top"></a><a href="/index.asp"><img src="/_img/logo_interior.gif" alt="Corporate Communications Broadcast Network" width="137" height="35" hspace="9" vspace="9" border="0"></a></td>
+    <td><a name="top" id="top"></a><a href="/index.asp"><img src="/_img/logo_ccbn_TF.gif" alt="Thomson CCBN" width="268" height="32" hspace="9" vspace="9" border="0"></a></td>
     <td align="right" valign="bottom"> 
       
   <table width="186" border="0" align="right" cellpadding="0" cellspacing="0">
