friendsreuniteddating.co.uk (archived on 2004-12-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 7312,
  "classifier_probability": 0.82,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.9,
  "homepage_snapshot_redirected_domain": "friendsreuniteddating.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040921010112id_/http://www.friendsreuniteddating.co.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040921010112id_/http%3A//friendsreuniteddating.co.uk",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "friendsreuniteddating.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041205090024id_/http%3A//www.friendsreuniteddating.co.uk/newfriends.ASP%3Fwci%3Dprivacy",
  "policy_title": "Dating UK \u2022 Friends Reunited Dating",
  "policy_url": "friendsreuniteddating.co.uk/newfriends.ASP?wci=privacy",
  "sha1": "52e3f93dca4cae29f2bb0f18d5f56d148c719fe9",
  "simhash": 18161897949504914765,
  "simhash_updated": false,
  "site_hostname": "friendsreuniteddating.co.uk",
  "site_url": "http://friendsreuniteddating.co.uk",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041205090024",
  "word_count": 1127,
  "year": 2004
}

--- a/f/fr/fri/friendsreuniteddating.co.uk.html
+++ b/f/fr/fri/friendsreuniteddating.co.uk.html
@@ -1,8 +1,9 @@
-<!--The following is the downloaded HTML source of the friendsreuniteddating.co.uk privacy policy that was archived on 2004-06-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040611053242id_/http%3A//www.friendsreuniteddating.co.uk/newfriends.ASP%3Fwci%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the friendsreuniteddating.co.uk privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205090024id_/http%3A//www.friendsreuniteddating.co.uk/newfriends.ASP%3Fwci%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/da-template-newtop.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <title>Dating UK • Friends Reunited Dating</title>
+
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="Expires" content="-1">
@@ -24,8 +25,8 @@ Friendship.">
 <meta name="abstract" content="Dating in the UK? Friends Reunited Dating is
 one of the UK's largest online dating agency with over 190,000 singles
 looking for a date."><!-- 
-Application Version: 10062004.1
-Machine: web16
+Application Version: 2.3.7
+Machine: web19 UK Live
  -->
 <link href="styles/style-newtop.css" rel="stylesheet" type="text/css">
 <link href="styles/localonly.css" rel="stylesheet" type="text/css">
@@ -36,8 +37,8 @@ function initsubframes(){
 		
 	//if (self.fmebuddylist) {fmebuddylist.location.href='newfriends.asp?wci=buddylist';}
 	//if (self.fmematches) {fmematches.location.href='newfriends.asp?wci=onlinelist';}
-	el = getlayer('skybutton');
-	if (el)	el.innerHTML =writeskybanner();// '<SCRIPT LANGUAGE="JavaScript" src="..\/javascript\/leftbanner.js"><\/SCRIPT>';
+	//el = getlayer('skybutton');
+	//if (el)	el.innerHTML =writeskybanner();// '<SCRIPT LANGUAGE="JavaScript" src="..\/javascript\/leftbanner.js"><\/SCRIPT>';
 }
 
 
@@ -51,7 +52,6 @@ function initsubframes(){
 <script language="javascript" src="javascript/rollover.js"></script>
 <script language="javascript" src="javascript/region.js"></script>
 <script language="JavaScript" src="javascript/rollover.js"></script>
-<script language="javascript" src="javascript/leftbanner.js"></script>
 
 
 <!-- InstanceParam name="divname" type="text" value="main" --><!-- InstanceParam name="rightside" type="boolean" value="true" --><!-- InstanceParam name="im" type="boolean" value="true" -->
@@ -72,39 +72,40 @@ function initsubframes(){
 </tr>
 <tr>
 <td height="79" align="right" valign="top"><img alt=" " src="image/blank_spacer.gif" width="6" height="20" align="right">
-
-<img src="image/spacer.gif" width="1" height="79" align="left">
 <script language="JavaScript">
- 
+
 <!-- Hide from old browsers v14.1.3
- 
+
 now = new Date();
- 
+
 random = now.getTime();
- 
+
 // Modify to reflect site specifics
- 
+
 site = "http://etype.adbureau.net/";
- 
+
 target = "/SITE=1UK.FRIENDSREUNITED/AREA=1N.OTHER/PSUB=N/LOCATION=TOP/CHANNEL=COMMUNITY/AAMSZ=468x60";
- 
+
 document.write('<IFRAME SRC="' + site + '/hserver/acc_random=' + random + target + '"');
- 
+
 document.write(' NORESIZE SCROLLING=NO HSPACE=0 VSPACE=0 FRAMEBORDER=0 MARGINHEIGHT=0 MARGINWIDTH=0 WIDTH=468 HEIGHT=60>');
- 
-document.write('<SCRIPT SRC="' + site + '/jnserver/acc_random=' + random + target + '">');
- 
-document.write('<\/SCRIPT>');
- 
-document.write('<\/IFRAME>');
- 
+
+document.write('<SCR');
+
+document.write('IPT SRC="' + site + '/jnserver/acc_random=' + random + target + '">');
+
+document.write('</SCR');
+
+document.write('IPT>');
+
+document.write('</IFRAME>');
+
 // End Hide -->
- 
-</script><iframe src="http://etype.adbureau.net//hserver/acc_random=1582143447873/SITE=1UK.FRIENDSREUNITED/AREA=1N.OTHER/PSUB=N/LOCATION=TOP/CHANNEL=COMMUNITY/AAMSZ=468x60" noresize="" scrolling="NO" hspace="0" vspace="0" frameborder="0" marginheight="0" marginwidth="0" width="468" height="60"><SCRIPT SRC="http://etype.adbureau.net//jnserver/acc_random=1582143447873/SITE=1UK.FRIENDSREUNITED/AREA=1N.OTHER/PSUB=N/LOCATION=TOP/CHANNEL=COMMUNITY/AAMSZ=468x60"></SCRIPT></iframe>
-<noscript>
-<A HREF="http://etype.adbureau.net/accipiter/adclick/SITE=1UK.FRIENDSREUNITED/AREA=1FR.FRD/PSUB=N/LOCATION=TOP/CHANNEL=COMMUNITY/AAMSZ=468x60"> <IMG SRC="http://etype.adbureau.net/accipiter/nserver/SITE=1UK.FRIENDSREUNITED/AREA=1FR.FRD/PSUB=N/LOCATION=TOP/CHANNEL=COMMUNITY/AAMSZ=468x60" border="0"> </A>
-</noscript>
-</td>
+
+</script><iframe src="http://etype.adbureau.net//hserver/acc_random=1582143453014/SITE=1UK.FRIENDSREUNITED/AREA=1N.OTHER/PSUB=N/LOCATION=TOP/CHANNEL=COMMUNITY/AAMSZ=468x60" noresize="" scrolling="NO" hspace="0" vspace="0" frameborder="0" marginheight="0" marginwidth="0" width="468" height="60"><SCRIPT SRC="http://etype.adbureau.net//jnserver/acc_random=1582143453014/SITE=1UK.FRIENDSREUNITED/AREA=1N.OTHER/PSUB=N/LOCATION=TOP/CHANNEL=COMMUNITY/AAMSZ=468x60"></SCRIPT></iframe>
+<noscript><A HREF="http://etype.adbureau.net/accipiter/adclick/SITE=1UK.FRIENDSREUNITED/AREA=1FR.FRD/PSUB=N/LOCATION=TOP/CHANNEL=COMMUNITY/AAMSZ=468x60"> 
+              <IMG SRC="http://etype.adbureau.net/accipiter/nserver/SITE=1UK.FRIENDSREUNITED/AREA=1FR.FRD/PSUB=N/LOCATION=TOP/CHANNEL=COMMUNITY/AAMSZ=468x60" border="0"> 
+        </A> </noscript></td>
 </tr>
 <tr>
 <td height="21" align="center" valign="bottom" class="text"><img src="image/spacer.gif" width="19" height="1" align="right">
@@ -144,27 +145,26 @@ document.write('<\/IFRAME>');
 <div id="leftnav">
 <a href="http://www.friendsreuniteddating.co.uk/newfriends.asp?wci=splash">Search</a><br>
 <a href="http://www.friendsreuniteddating.co.uk/newfriends.asp?wci=register&amp;type=register">Register</a><br>
+<a href="http://www.friendsreuniteddating.co.uk/newfriends.asp?wci=loginpage&amp;type=login">Login</a><br>
 <a href="http://www.friendsreuniteddating.co.uk/newfriends.asp?wci=aboutus">About us</a><br>
 <a href="http://www.friendsreuniteddating.co.uk/newfriends.asp?wci=faqs">Need help?</a><br>
 <br>
 </div>
-	<br>
-
-			<br>			
-		<div class="leftbanner">
-			<br>
-			<br>
-			<br>
-		</div>
+	
+	<div id="skybutton" class="leftbanner">
+<script language="javascript" src="javascript/leftbanner.js"></script><iframe src="http://view.atdmt.com/OUT/iview/frndsfrf0010000032out/direct/01?click=" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" topmargin="0" leftmargin="0" allowtransparency="true" width="125" height="125"><a href="http://clk.atdmt.com/OUT/go/frndsfrf0010000032out/direct/01/" target="_blank"><img src="http://view.atdmt.com/OUT/view/frndsfrf0010000032out/direct/01/"/></a></iframe>
+<noscript>
+<a href="http://www.aol.co.uk" target="_blank"><img src="image/banners/aol/aol9_0805_FR_bb_gen_a.gif" width="125" height="125" border="0"></a></noscript>
+<!--	--></div>
 	</div>
 <div id="centre">
 	<div class="login">
-
+<script language="javascript" src="validate.js"></script>
 		<form action="Newfriends.asp?wci=searchresults&amp;wce=quicksearch" method="post" name="quicksearch" id="datingform">
        
 	<table border="0" align="center" cellpadding="0" cellspacing="0">
 				<tbody><tr>
-				 <script language="javascript" src="validate.js"></script><td class="textblue"><strong>Quick search</strong>	&nbsp;&nbsp;			
+				 <td class="textblue"><strong>Quick search</strong>	&nbsp;&nbsp;			
 <select name="gender" size="1" class="textblue"><option selected="" value="1">Male</option><option value="2">Female</option></select>&nbsp;seeks&nbsp;<select name="lookingfor_gender" size="1" class="textblue"><option value="1">Male</option><option selected="" value="2">Female</option><option value="3">Either</option></select>&nbsp;Aged&nbsp;<select name="lookingfor_age_lower" class="textblue"><option value="20">20s</option><option selected="" value="30">30s</option><option value="40">40s</option><option value="50">50s</option><option value="60">60s</option><option value="70">70s</option><option value="80">80s</option><option value="">90s</option></select>							
 				<img src="image/blank_spacer.gif" width="8" height="8"></td>
 				<td align="left">
@@ -182,8 +182,9 @@ document.write('<\/IFRAME>');
   Messenger </a> </div>
 <!-- InstanceBeginEditable name="Header" -->Privacy 
         Policy <!-- InstanceEndEditable --></div>
+<div class="subheader">
 
-<div class="subheader"><!-- InstanceBeginEditable name="SubHeader" --><!-- InstanceEndEditable --></div>
+<!-- InstanceBeginEditable name="SubHeader" --><!-- InstanceEndEditable --></div>
 <div id="main">
 	<div class="mainindent">
 <!-- InstanceBeginEditable name="body" --> 
@@ -389,7 +390,7 @@ document.write('<\/IFRAME>');
                       <td width="97%"><b>Contacting FriendsReunitedDating </b><br>
                         If you have any questions about this privacy statement, 
                         the practices of this site, or your dealings with FriendsReunitedDating, 
-                        you can contact us <a href="newfriends.asp?wci=contactus&amp;email=support&amp;subject=Privacy%20Policy%20Query">support@FriendsReunitedDating.co.uk</a>. 
+                        you can contact us <a href="newfriends.asp?wci=contactus&amp;email=2&amp;subject=Privacy%20Policy%20Query">support@FriendsReunitedDating.co.uk</a>. 
                         You can also use this address if you wish to request from 
                         FriendsReunitedDating a copy of the personal data we hold 
                         about you or a description of that data. Please note that 
@@ -430,29 +431,28 @@ document.write('<\/IFRAME>');
   <div class="indent"> <img src="image/rightside-top.gif" width="150" height="9"><div class="side">
         <div class="header">Dater's Diary</div>
         
-        <div class="text">Well having re-instated my profile nearly a week ago after finding out the 'THE ONE' wasn't to be...<br>
+        <div class="text">Thank u for putting that smile back on my face &amp; to FRD for all the work u do to keep this site open<br>
             <a href="newfriends.asp?wci=datersdiary">more</a>»
           </div>
            </div>
       <img src="image/rightside-bot.gif" width="150" height="11"></div>
 </div>
 
-<div id="bottom"><a href="http://www.friendsreunited.co.uk">Friends Reunited</a> | 
-<a href="http://www.friendsreuniteddating.co.uk">Dating</a> | 
-<a href="http://www.genesconnected.co.uk">Family Tree</a> | 
-<a href="http://www.friendsreunitedlottery.co.uk">Lottery</a> | 
-<a href="http://www.friendsreunited.co.uk/extras/index.htm">Extras</a>
-<br><br>
+<div id="bottom"><a href="http://www.friendsreunited.co.uk">Friends Reunited</a>&nbsp;|&nbsp;<a href="http://www.friendsreuniteddating.co.uk">Dating</a>&nbsp;|&nbsp;<a href="http://www.genesreunited.co.uk">Family Tree</a>&nbsp;|&nbsp;<a href="http://www.friendsreunited.co.uk/extras/index.htm">Extras</a><br><br>
 [<a href="newfriends.ASP?WCI=aboutus">About Us</a>] 
 [<a href="newfriends.ASP?wci=feedback">Contact Us</a>] 
 [<a href="newfriends.ASP?wci=terms">Terms and Conditions</a>] 
 [<a href="newfriends.ASP?wci=privacy">Privacy Policy</a>]
 <br><br>
-Copyright Friends Reunited Dating  Limited 2000-2004<a href="http://www.happygroup.co.uk" target="_blank">
-<img alt="HappyGroup Ltd" src="image/charliebody.gif" width="20" height="28" align="absmiddle" border="0"></a>
-<br>All site material is owned by Happy Group Limited and should not be used without prior permission<br>
-Any views expressed in  members messages and member profiles represent the opinions of the author, and do not represent the opinions of Friends Reunited Dating</div>	
-</div></div><img alt="" src="image/bottom.gif"></div>
+Copyright Friends Reunited Dating  Limited 2000-2004
+&nbsp;(2.3.7)
+<br>
+All site material is owned by Happy Group Limited and should not be used without prior permission
+<br>
+Any views expressed in  members messages and member profiles represent the opinions of the author, and do not represent the opinions of Friends Reunited Dating
+</div>	
+</div></div>
+<img alt="" src="image/bottom.gif"></div>
 <!-- START RedSheriff Measurement V5.01 -->
 <!-- COPYRIGHT 2002 RedSheriff Limited -->
 <script language="JavaScript" type="text/javascript"><!--
@@ -479,11 +479,8 @@ Any views expressed in  members messages and member profiles represent the opini
 <img src="//secure-uk.imrworldwide.com/cgi-bin/m?ci=friendsreunited&amp;cg=0" alt="">
 </noscript>
 <!-- END RedSheriff Measurement V5 -->
-<script>
-/*load the main page then worry about the subframes to make the load of the main page faster
-do not put in onload as if banners fall over then subframes do nto load*/
-//initsubframes();
-</script>
+
+
 
 <!-- InstanceEnd -->
 </body></html>
