--- a/f/fa/faf/fafsa.com.html
+++ b/f/fa/faf/fafsa.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fafsa.com privacy policy that was archived on 2004-04-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040402013305id_/http%3A//www.fafsa.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fafsa.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205090953id_/http%3A//www.fafsa.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -42,6 +42,7 @@ function Certify(URL) {
 }
 // -->
 </script>
+
 
 
 
@@ -263,7 +264,7 @@ if(MSFPhover) { MSFPnav13n=MSFPpreload("_derived/announcements.htm_cmp_metamorph
           <tbody><tr>
             <td width="100%" class="banner">
             <h4 align="center">
-            <strong><font color="#FF3300" size="3">FAFSA.com <br>
+            <strong><font color="#FF3300" size="2" face="Verdana">FAFSA.com
             Privacy Notice</font></strong></h4>
             </td>
           </tr>
@@ -447,11 +448,11 @@ if(MSFPhover) { MSFPnav13n=MSFPpreload("_derived/announcements.htm_cmp_metamorph
               support@fafsa.com</a>.&nbsp; You may also
                 make changes to your FAFSA record on your Student Aid Report (SAR) as noted above.&nbsp;
                 The student will also receive an Acknowledgment form from the College Scholarship Service
-                (CSS) if you requested that we complete the CSS PROFILE application for you.&nbsp; For
+                (CSS) if you requested that we complete the CSS PROFILE application for you. For
                 more information about making changes to your SAR, visit our web site at
 <a href="sar.htm">
               http://www.fafsa.com/sar.htm</a> or contact the Federal
-                processing center (CPS) at 1-800-433-3243. &nbsp; You may also request
+                processing center (CPS) at 1-800-433-3243. You may also request
                 a duplicate SAR by calling the same number.</font></p>
                 <p><font face="Verdana" size="1">To protect your privacy and security, we will also take reasonable steps to verify your
                 identity before granting access or making corrections.&nbsp; This is done by verifying the
@@ -495,8 +496,7 @@ if(MSFPhover) { MSFPnav13n=MSFPpreload("_derived/announcements.htm_cmp_metamorph
     <p class="sidecolumn" style="text-align: center"><font color="#FFFFFF">
     <a href="customerquotes.htm" style="text-decoration: none">
     <font color="#FFFFFF" size="1" face="Verdana">Read what customers say 
-    about Student Financial Aid Services
-    <img border="0" src="images/adobe/pdfdocumentsymbol.gif" width="20" height="13"></font></a></font></p>
+    about FAFSA.com <img border="0" src="images/adobe/pdfdocumentsymbol.gif" width="20" height="13"></font></a></font></p>
     <p class="sidecolumn" style="text-align: center"><font color="#FFFFFF">
     <a href="faaquotes.htm" style="text-decoration: none"><font color="#FFFFFF" size="1" face="Verdana">Read what college financial 
     aid professionals and other national leaders say
@@ -508,11 +508,14 @@ if(MSFPhover) { MSFPnav13n=MSFPpreload("_derived/announcements.htm_cmp_metamorph
     <p style="text-align: center">
     <font size="1" face="Verdana">
     <img border="0" src="images/navigation/rightcoldivider.gif" width="170" height="8"><b><br>
+    </b>
     <font color="#FFFFFF"><a href="financialaidservices.htm">
-    <font color="#FFFFFF">Evaluating Scholarship Search &amp; Other Financial Aid 
-    Services</font></a><br>
+    <font color="#FFFFFF">Evaluating Scholarship Search &amp; Other&nbsp;<br>
+ Financial Aid 
+    Services</font></a><b><br>
+    </b>
     </font>
-    </b><font color="#FFFFFF"><img border="0" src="images/navigation/rightcoldivider.gif" width="170" height="8"></font></font></p>
+    <font color="#FFFFFF"><img border="0" src="images/navigation/rightcoldivider.gif" width="170" height="8"></font></font></p>
     <p class="sidecolumn" style="text-align: center"><font color="#FFFFFF" size="1" face="Verdana">
     <a href="financialaidservices.htm" style="text-decoration: none">
     <font color="#FFFFFF">Inform yourself about scholarship search and other 
