--- a/c/ch/chi/chinet.org.html
+++ b/c/ch/chi/chinet.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the chinet.org privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605034443id_/http%3A//chinet.org/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the chinet.org privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205145135id_/http%3A//www.chinet.org/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>CHI: Privacy Statement</title>
@@ -106,7 +106,7 @@
 				</font><p><font size="1">
 				Copyright © 1998-2002, Cultural Homestay International<br>
 				This page was last modified <script language="javascript">
-				document.write(document.lastModified);</script>02/19/2020 21:25:04</font></p></center></td>
+				document.write(document.lastModified);</script>02/19/2020 21:25:09</font></p></center></td>
 			</tr>
 		</tbody></table>
 		<!--END MAIN CONTENT TABLE-->
