--- a/w/wi/wil/wildblue.com.html
+++ b/w/wi/wil/wildblue.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the wildblue.com privacy policy that was archived on 2004-02-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040207122930id_/http%3A//wildblue.com/legal/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wildblue.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205150252id_/http%3A//www.wildblue.com/legal/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 
@@ -276,7 +276,7 @@ if(document.images)
     <td width="20%" valign="top">
 
 <!-- LEFT COLUMN BEGIN -->
-	<a href="/"><img src="/images/wb_logo.gif" border="0" width="125" height="132" alt="WildBlue Communications"></a>
+	<a href="/"><img src="/images/wb_logo.gif" border="0" width="150" height="125" alt="WildBlue Communications"></a>
 	<br>
 	<br>
 	<a class="title">Get WildBlue!</a>
@@ -284,7 +284,7 @@ if(document.images)
 	<a class="more">Put your name on WildBlue's 
 	<br>Priority Wait List</a>
 	<br>
-	<a href="/order/"><img src="/images/order.gif" border="0" width="100" height="25" alt="Put your name on WildBlue's Priority Wait List today!"></a>
+	<a href="/order/"><img src="/images/order.gif" border="0" width="92" height="25" alt="Put your name on WildBlue's Priority Wait List today!"></a>
 	<br>
 	<br>
 	<a class="title">Sell WildBlue.</a>
@@ -293,7 +293,7 @@ if(document.images)
 	<br>interested in becoming a 
 	<br>WildBlue dealer or installer.</a>
 	<br>
-	<a href="/contact/dealers.asp"><img src="/images/dealer.gif" border="0" width="100" height="25" alt="Dealers, put your name on WildBlue's dealer waiting list today!"></a>
+	<a href="/contact/dealers.asp"><img src="/images/dealer.gif" border="0" width="92" height="25" alt="Dealers, put your name on WildBlue's dealer waiting list today!"></a>
 	<br>
 	<br>
         <form action="/search/default.asp" id="form1" method="get" name="form1">
