--- a/c/ca/car/cartooncritters.com.html
+++ b/c/ca/car/cartooncritters.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cartooncritters.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603192658id_/http%3A//cartooncritters.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cartooncritters.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205170740id_/http%3A//www.cartooncritters.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Cartoon Critters - coloring pages,learn to draw,online games</title>
