--- a/n/na/nat/naturemade.com.html
+++ b/n/na/nat/naturemade.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the naturemade.com privacy policy that was archived on 2004-06-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040615032428id_/http%3A//www.naturemade.com/UserAccount/uar_policies.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the naturemade.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205172647id_/http%3A//naturemade.com/UserAccount/uar_policies.asp) for the most accurate reproduction.-->
 
 <html><head>
 	<title>NatureMade Wellness Advisor</title>
@@ -13,7 +13,7 @@
 <table cellpadding="0" cellspacing="0" border="0" marginheight="0" marginwidth="0" width="100%">
 	<tbody><tr>
 		<td valign="top" bgcolor="#CECE9C">
-			<!-- Server = 1060 --><!-- Session = -1 --><!-- DateTime = 6/14/2004 8:27:33 PM --><script language="Javascript">
+			<!-- Server = 1060 --><!-- Session = -1 --><!-- DateTime = 12/5/2004 9:30:09 AM --><script language="Javascript">
 function rollOn(name)
 {         
 	if (document.images)
@@ -152,7 +152,7 @@ OpenWin = this.open(page,'messageWindow1','scrollbars=yes,width=449,height=386')
 			<td align="left" valign="top" width="252" height="33"><img src="/images/Topnav_Curve_Right.gif" width="252" height="33" border="0"></td>
 			
 	<td align="right" valign="middle" background="/images/Topnav_H_Line.gif" width="404" height="33"><img src="/images/spacer.gif" width="15" height="1" border="0" align="right">
-	<font class="font10">&nbsp;&nbsp;&nbsp;&nbsp;Monday, June 14, 2004</font></td>
+	<font class="font10">&nbsp;&nbsp;&nbsp;&nbsp;Sunday, December 05, 2004</font></td>
 
 		</tr>
 	</tbody></table>
