--- a/a/az/azd/azdes.gov.html
+++ b/a/az/azd/azdes.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the azdes.gov privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603173048id_/http%3A//www.de.state.az.us/privacy/default.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the azdes.gov privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205173548id_/http%3A//www.azdes.gov/privacy/default.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="EN"><head>
 <title></title>
