chemtable.com (archived on 2004-12-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 1413,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.4,
  "homepage_snapshot_redirected_domain": "chemtable.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040926102311id_/http://www.chemtable.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040926102311id_/http%3A//chemtable.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "chemtable.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041205174228id_/http%3A//www.chemtable.com/privacy.htm",
  "policy_title": "ChemTable Software - Privacy Policy",
  "policy_url": "chemtable.com/privacy.htm",
  "sha1": "8193673b9d27ff5c6d2fd724cce4cafb13d99e4c",
  "simhash": 10197126245947742776,
  "simhash_updated": false,
  "site_hostname": "chemtable.com",
  "site_url": "http://chemtable.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041205174228",
  "word_count": 221,
  "year": 2004
}

--- a/c/ch/che/chemtable.com.html
+++ b/c/ch/che/chemtable.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the chemtable.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602224319id_/http%3A//www.chemtable.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the chemtable.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205174228id_/http%3A//www.chemtable.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>ChemTable Software - Privacy Policy</title>
@@ -105,6 +105,79 @@
 			</tbody></table>
 		</td>
         </tr>
+		
+		<tr>
+		<td>
+			<table border="0" cellpadding="10" cellspacing="0">
+			<tbody><tr>
+			<td>
+			<p class="headline">November 23, 2004
+			</p><p class="small">The New <a href="http://www.chemtable.com/files/regon.zip">Reg Organizer 2.37</a> is available.
+			</p></td>
+			</tr>
+			</tbody></table>
+		</td>
+		</tr>
+		<tr>
+		<td>
+			<table border="0" cellpadding="0" cellspacing="0">
+			<tbody><tr>
+			<td background="/images/en/headline/bg2.gif"><img src="/images/en/x.gif" width="168" height="18" border="0"></td>
+			<td><img src="/images/en/headline/bg2line.gif" width="17" height="18" border="0"></td>
+			<td background="/images/en/headline/bg3.gif" width="100" align="top" nowrap=""><a href="/news.htm" class="more">read more<img src="/images/en/headline/more.gif" width="21" height="12" align="middle" hspace="1" border="0"></a></td>
+			</tr>
+			</tbody></table>
+		</td>
+		</tr>
+			
+		<tr>
+		<td>
+			<table border="0" cellpadding="10" cellspacing="0">
+			<tbody><tr>
+			<td>
+			<p class="headline">October 15, 2004
+			</p><p class="small"><a href="http://www.chemtable.com/files/regon.zip">Reg Organizer 2.3</a> released.
+			</p></td>
+			</tr>
+			</tbody></table>
+		</td>
+		</tr>
+		<tr>
+		<td>
+			<table border="0" cellpadding="0" cellspacing="0">
+			<tbody><tr>
+			<td background="/images/en/headline/bg2.gif"><img src="/images/en/x.gif" width="168" height="18" border="0"></td>
+			<td><img src="/images/en/headline/bg2line.gif" width="17" height="18" border="0"></td>
+			<td background="/images/en/headline/bg3.gif" width="100" align="top" nowrap=""><a href="/news.htm" class="more">read more<img src="/images/en/headline/more.gif" width="21" height="12" align="middle" hspace="1" border="0"></a></td>
+			</tr>
+			</tbody></table>
+		</td>
+		</tr>
+			
+		<tr>
+		<td>
+			<table border="0" cellpadding="10" cellspacing="0">
+			<tbody><tr>
+			<td>
+			<p class="headline">July 28, 2004
+			</p><p class="small">The new Check For Update plug-in for Reg Organizer added to the <a href="http://www.chemtable.com/plugins.htm">Plug-ins</a> area.
+			</p></td>
+			</tr>
+			</tbody></table>
+		</td>
+		</tr>
+		<tr>
+		<td>
+			<table border="0" cellpadding="0" cellspacing="0">
+			<tbody><tr>
+			<td background="/images/en/headline/bg2.gif"><img src="/images/en/x.gif" width="168" height="18" border="0"></td>
+			<td><img src="/images/en/headline/bg2line.gif" width="17" height="18" border="0"></td>
+			<td background="/images/en/headline/bg3.gif" width="100" align="top" nowrap=""><a href="/news.htm" class="more">read more<img src="/images/en/headline/more.gif" width="21" height="12" align="middle" hspace="1" border="0"></a></td>
+			</tr>
+			</tbody></table>
+		</td>
+		</tr>
+			
 		<tr>
 		<td>
 			<table border="0" cellpadding="10" cellspacing="0">
@@ -129,83 +202,11 @@
 		</td>
 		</tr>
 				
-		<tr>
-		<td>
-			<table border="0" cellpadding="10" cellspacing="0">
-			<tbody><tr>
-			<td>
-			<p class="headline">February 2, 2004
-			</p><p class="small">Final release of Reg Organizer 2.0. <a href="http://www.chemtable.com/files/regon.zip">Download now</a> (1.35 Mb).
-			</p></td>
-			</tr>
-			</tbody></table>
-		</td>
-		</tr>
-		<tr>
-		<td>
-			<table border="0" cellpadding="0" cellspacing="0">
-			<tbody><tr>
-			<td background="/images/en/headline/bg2.gif"><img src="/images/en/x.gif" width="168" height="18" border="0"></td>
-			<td><img src="/images/en/headline/bg2line.gif" width="17" height="18" border="0"></td>
-			<td background="/images/en/headline/bg3.gif" width="100" align="top" nowrap=""><a href="/news.htm" class="more">read more<img src="/images/en/headline/more.gif" width="21" height="12" align="middle" hspace="1" border="0"></a></td>
-			</tr>
-			</tbody></table>
-		</td>
-		</tr>
-		
-		<tr>
-		<td>
-			<table border="0" cellpadding="10" cellspacing="0">
-			<tbody><tr>
-			<td>
-			<p class="headline">January 13, 2004
-			</p><p class="small">Reg Organizer 2.0 beta 4 released. <a href="http://www.chemtable.com/files/robeta.zip">Download now</a> (1.35 Mb).
-			</p></td>
-			</tr>
-			</tbody></table>
-		</td>
-		</tr>
-		<tr>
-		<td>
-			<table border="0" cellpadding="0" cellspacing="0">
-			<tbody><tr>
-			<td background="/images/en/headline/bg2.gif"><img src="/images/en/x.gif" width="168" height="18" border="0"></td>
-			<td><img src="/images/en/headline/bg2line.gif" width="17" height="18" border="0"></td>
-			<td background="/images/en/headline/bg3.gif" width="100" align="top" nowrap=""><a href="/news.htm" class="more">read more<img src="/images/en/headline/more.gif" width="21" height="12" align="middle" hspace="1" border="0"></a></td>
-			</tr>
-			</tbody></table>
-		</td>
-		</tr>
-		
-		<tr>
-		<td>
-			<table border="0" cellpadding="10" cellspacing="0">
-			<tbody><tr>
-			<td>
-			<p class="headline">December 8, 2003
-			</p><p class="small">Reg Organizer 2.0 beta 3 released. <a href="http://www.chemtable.com/files/robeta.zip">Download now</a> (1.34 Mb).
-			</p></td>
-			</tr>
-			</tbody></table>
-		</td>
-		</tr>
-		<tr>
-		<td>
-			<table border="0" cellpadding="0" cellspacing="0">
-			<tbody><tr>
-			<td background="/images/en/headline/bg2.gif"><img src="/images/en/x.gif" width="168" height="18" border="0"></td>
-			<td><img src="/images/en/headline/bg2line.gif" width="17" height="18" border="0"></td>
-			<td background="/images/en/headline/bg3.gif" width="100" align="top" nowrap=""><a href="/news.htm" class="more">read more<img src="/images/en/headline/more.gif" width="21" height="12" align="middle" hspace="1" border="0"></a></td>
-			</tr>
-			</tbody></table>
-		</td>
-		</tr>
 		
 		<tr>
 		<td>&nbsp;</td>
 		</tr>
 		</tbody></table>
-
 
 <!-- news info box end -->
 		<!-- offer info box start -->		
@@ -240,28 +241,10 @@
 			</tr>
 			<tr>
 				<td align="right">
-				<!-- HotLog -->
-<script language="javascript">
-hotlog_js="1.0";
-hotlog_r=""+Math.random()+"&s=61506&im=10&r="+escape(document.referrer)+"&pg="+
-escape(window.location.href);
-document.cookie="hotlog=1; path=/"; hotlog_r+="&c="+(document.cookie?"Y":"N");
-</script><script language="javascript1.1">
-hotlog_js="1.1";hotlog_r+="&j="+(navigator.javaEnabled()?"Y":"N")</script>
-<script language="javascript1.2">
-hotlog_js="1.2";
-hotlog_r+="&wh="+screen.width+'x'+screen.height+"&px="+
-(((navigator.appName.substring(0,3)=="Mic"))?
-screen.colorDepth:screen.pixelDepth)</script>
-<script language="javascript1.3">hotlog_js="1.3"</script>
-<script language="javascript">hotlog_r+="&js="+hotlog_js;
-document.write("<a href='http://click.hotlog.ru/?61506' target='_top'><img "+
-" src='http://hit4.hotlog.ru/cgi-bin/hotlog/count?"+
-hotlog_r+"&' border=0 width=88 height=31 alt=HotLog></a>")</script><a href="http://click.hotlog.ru/?61506" target="_top"><img src="http://hit4.hotlog.ru/cgi-bin/hotlog/count?0.1277388855830126&amp;s=61506&amp;im=10&amp;r=&amp;pg=https%3A//web.archive.org/web/20040602224319id_/http%253A//www.chemtable.com/privacy.htm&amp;c=Y&amp;j=N&amp;wh=800x600&amp;px=24&amp;js=1.3&amp;" border="0" width="88" height="31" alt="HotLog"></a>
-<noscript><a href=http://click.hotlog.ru/?61506 target=_top><img
-src="http://hit4.hotlog.ru/cgi-bin/hotlog/count?s=61506&im=10" border=0 
-width="88" height="31" alt="HotLog"></a></noscript>
-<!-- /HotLog -->
+<!--begin of Top100-->
+<a href="http://top100.rambler.ru/top100/">
+<img src="http://counter.rambler.ru/top100.cnt?632087" alt="Rambler's Top100" width="81" height="63" border="0"></a>
+<!--end of Top100 code-->
 				&nbsp;</td>
 			</tr>
 			</tbody></table>
