ipost.com (archived on 2004-12-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 10856,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.89,
  "homepage_snapshot_redirected_domain": "ipost.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040929082901id_/http://www.ipost.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040929082901id_/http%3A//ipost.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "ipost.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041205181838id_/http%3A//www.ipost.com/privacy.htm",
  "policy_title": "iPost direct email services",
  "policy_url": "ipost.com/privacy.htm",
  "sha1": "ad4710da97611b1ddb3d7ee43f5e4c885f787d17",
  "simhash": 11239773093318825051,
  "simhash_updated": true,
  "site_hostname": "ipost.com",
  "site_url": "http://ipost.com",
  "smog": 14.84,
  "strict_updated": true,
  "timestamp": "20041205181838",
  "word_count": 1775,
  "year": 2004
}

--- a/i/ip/ipo/ipost.com.html
+++ b/i/ip/ipo/ipost.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ipost.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605150607id_/http%3A//www.ipost.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ipost.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205181838id_/http%3A//www.ipost.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/page.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="msite.css">
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
-<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<body bgcolor="#E6E6F2" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 
 
 
@@ -41,7 +41,7 @@
 
 
 
-<table class="bborder" width="745" cellpadding="0" cellspacing="0">
+<table class="bborder" width="100%" cellpadding="0" cellspacing="0">
 
 
 
@@ -89,7 +89,7 @@
 
 
 
-                      <td align="left"><a href="index.htm"><img src="images/mlogo.gif" width="140" height="50" border="0"></a></td>
+                      <td width="220" align="left"><a href="index.htm"><img src="images/mlogo.gif" width="140" height="50" border="0"></a></td>
 
 
 
@@ -97,6 +97,7 @@
 
 
 
+                      <td align="right"><img src="images/tag.gif" width="211" height="30"></td>
                       <td align="right"> <table border="0" cellpadding="0" cellspacing="0">
 
 
@@ -113,13 +114,8 @@
 
 
 
-                            <td class="datastylelt"> <a class="lt" href="contact.htm">Contact Us</a>
-
-                              | <a class="lt" href="site.htm">Site
-
-                            Map</a> | <a class="lt" href="request.htm">Request
-
-                            a Demo</a> | <a class="lt" href="login.xpml"> Login</a></td>
+                            <td class="datastylelt"> <div align="right"><a class="lt" href="request.htm">Request
+                            More Info</a> | <a class="lt" href="login.xpml"> Login</a></div></td>
 
 
 
@@ -257,7 +253,10 @@
                     web browser to the same site, or to remember information between 
                     sessions on the website for the convenience of the user.</p>
 
-                  <p>iPost does not presently use cookies on this website.</p>
+                  <p>iPost does not presently use cookies on this website, except
+                    in partnering with Google to track conversions from the Google
+                    Adwords network. This tracking only applies to users who
+                    clickthrough to the iPost site from a Google Adword advertisement.</p>
                   <p>Clients
                       of  iPost may elect to use cookies on their own websites,
                       some 
@@ -486,13 +485,6 @@
 
 
         </tr>
-
-
-
-
-
-
-
       </tbody></table></td>
 
 
@@ -517,13 +509,13 @@
 
 
 
-    <td class="footerstyle"><div align="center"><a href="solutions.htm">Solutions</a> 
+    <td bgcolor="#E6E6F2" class="footerstyle"><div align="center"><a href="solutions.htm">Solutions</a> 
 
         | <a href="features.htm">Features</a> | <a href="resources.htm">Resources</a> 
 
        | <a href="clients.htm">Clients</a> | <a href="company.htm">Company</a> 
 
-      | <a href="request.htm">Request a Demo</a><br>
+      | <a href="site.htm">Site Map</a> | <a href="contact.htm">Contact Us</a> | <a href="request.htm">Request More Info</a><br>
 
     © 1999-2004, iPost. <a href="privacy.htm">Privacy Policy</a>. </div></td>
 
@@ -534,7 +526,6 @@
 
 
   </tr>
-
 </tbody></table>
 
 
