--- a/b/br/bri/brivo.com.html
+++ b/b/br/bri/brivo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the brivo.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604132242id_/http%3A//brivo.com/legal/privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the brivo.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205200941id_/http%3A//www.brivo.com/legal/privacy.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>Brivo Systems</title>
